# ml-chaos

./: .gitignore  README.MD  data.ipynb  demo.ipynb  pyproject.toml  requirements.in  requirements.txt  threshold.ipynb
chaos/: __init__.py  indicator.py  mapping.py  orbit.py  utils.py
data/: full.npy  zoom.npy
notebooks/2024-04-04/: demo.ipynb
